# RL2

./: .gitignore  pyproject.toml
MultiPL-E/: README.md  pass_k.csv
RL2/datasets/: base.py  rl.py
RL2/trainer/config/: ppo.yaml
RL2/utils/: checkpointing.py
RL2/workers/: rollout.py
envs/: multiple_turn2.py  orz_turn2.py  pddl.py
eval/: README.md  multipl_eval.py
eval/analyze/: README.md  timing_tracker.py
eval/multipl/: README.md  multipl.sh  multipl_eval.py
eval/pddl/: README.md  gripper.pddl  pddl.sh  pddl_eval.py
examples/24gb/: countdown_reinforce_4k.sh  multiple_test_reinforce_small_1k_1k_4gpu_turn2.sh  multiple_test_reinforce_small_1k_1k_8gpu_turn2.sh  multiple_test_reinforce_small_1k_1k_8gpu_turn2_liger.sh  multiple_test_reinforce_small_1k_1k_8gpu_turn2_resume.sh  multiple_test_reinforce_small_2k_8gpu_turn2.sh  multiple_test_reinforce_small_4k_1k_8gpu_turn2.sh  multiple_test_reinforce_small_4k_1k_8gpu_turn2_resume.sh  orz_reinforce_medium_1k_8gpu_turn2.sh  orz_reinforce_small_2k_8gpu_turn2.sh  orz_reinforce_tiny_4k.sh  orz_reinforce_tiny_4k_8gpu.sh  orz_reinforce_tiny_4k_8gpu_turn2.sh  orz_reinforce_tiny_8k_8gpu.sh
pddl/: README.md  blocksworld.pddl  evaluate_pddl.py  floor-tile.pddl  pass_1.py
