[project]
name = "rl2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch==2.8.0",
    "flash-attn==2.8.3",
    "hydra-core>=1.3.2",
    "ninja>=1.13.0",
    "ring-flash-attn==0.1.8",
    "tqdm>=4.67.1",
    "transformers==4.56.1",
    "peft>=0.17.1",
    "liger-kernel>=0.6.2",
    "sglang[all]==0.5.2",
    "wandb>=0.22.0",
    "torchdata>=0.11.0",
    "omegaconf>=2.3.0",
    "nvidia-ml-py>=13.580.82",
    "math-verify>=0.8.0",
    "planetarium",
]

[tool.uv.extra-build-dependencies]
flash-attn = [{requirement = "torch", match-runtime = true}]

[tool.uv.sources]
planetarium = { git = "https://github.com/BatsResearch/planetarium.git" }

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["RL2*"]
